--- a/sso/pom.xml
+++ b/sso/pom.xml
@@ -33,6 +33,14 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 			<version>2.1.3.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-data-redis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 <!--		<dependency>-->
 <!--			<groupId>org.springframework.security.oauth</groupId>-->
 <!--			<artifactId>spring-security-oauth2</artifactId>-->
@@ -49,7 +57,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
+        </dependency>
+    </dependencies>
 
 	<dependencyManagement>
 		<dependencies>
