--- a/sso/src/main/resources/application.properties
+++ b/sso/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 server.port=8080
 server.servlet.context-path=/sso-server
 management.endpoints.web.exposure.include=*
+
+spring.session.store-type=redis
+server.servlet.session.timeout=600
+spring.session.redis.flush-mode=on-save
+spring.redis.port=6379
+spring.redis.host=13.233.193.157
+spring.redis.password=1234....
+#spring.session.redis.namespace=spring:session
+
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
