--- a/app1/src/main/resources/application.yml
+++ b/app1/src/main/resources/application.yml
@@ -9,12 +9,12 @@ management:
         include: '*'
 security:
   oauth2:
-    client:
-      grant-type: implicit
-      client-id: foo
-      client-secret:  bar
-      access-token-uri: http://localhost:8080/sso-server/oauth/token
-      user-authorization-uri: http://localhost:8080/sso-server/oauth/authorize
+#    client:
+#      grant-type: implicit
+#      client-id: foo
+#      client-secret:  bar
+#      access-token-uri: http://localhost:8080/sso-server/oauth/token
+#      user-authorization-uri: http://localhost:8080/sso-server/oauth/authorize
     resource:
       user-info-uri: http://localhost:8080/sso-server/user/me
   basic:
