--- a/app1/src/main/resources/application.yml
+++ b/app1/src/main/resources/application.yml
@@ -17,5 +17,9 @@ security:
 #      user-authorization-uri: http://localhost:8080/sso-server/oauth/authorize
     resource:
       user-info-uri: http://localhost:8080/sso-server/user/me
+      jwt:
+        key-uri: http://localhost:8080/sso-server/oauth/token_key
+#      jwk:
+#        key-set-uri: http://localhost:8080/sso-server/.well-known/jwks.json
   basic:
     enabled: false
