--- a/sso/pom.xml
+++ b/sso/pom.xml
@@ -41,6 +41,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.nimbusds</groupId>
+			<artifactId>nimbus-jose-jwt</artifactId>
+			<version>6.0</version>
+		</dependency>
 <!--		<dependency>-->
 <!--			<groupId>org.springframework.security.oauth</groupId>-->
 <!--			<artifactId>spring-security-oauth2</artifactId>-->
